use message from error result