@@ -84,7 +84,7 @@ tasks.register('macApp') {
 tasks.named('jini').configure {
     mainClassName = 'com.sb.transmissionremote.TransmissionRemote'
     exeFilename = 'transmission-remote.exe'
-    vmArgs = ['-Xmx64m']
+    vmArgs = ['-Xmx64m', '--enable-native-access=ALL-UNNAMED']
     icon = "${projectDir}/src/main/resources/style/transmission-remote.ico"
     fileVersion = "1.0.0.306"
     productVersion = "1.0.0.306"
